--- a/svd/Makefile
+++ b/svd/Makefile
@@ -5,6 +5,15 @@
 
 TARGET=main
 
+run:
+	matlab -r "run('../graph.txt', '../training.txt', '../test_data/test_data_q1.txt', 'out1.txt');exit(0);" -nodesktop -nosplash 
+	matlab -r "run('../graph.txt', '../training.txt', '../test_data/test_data_q2.txt', 'out2.txt');exit(0);" -nodesktop -nosplash
+	matlab -r "run('../graph.txt', '../training.txt', '../test_data/test_data_q3.txt', 'out3.txt');exit(0);" -nodesktop -nosplash
+
+test:
+	python ../eval.py out1.txt ../test_data/test_data_a1.txt
+	python ../eval.py out2.txt ../test_data/test_data_a2.txt
+	python ../eval.py out3.txt ../test_data/test_data_a3.txt
 all: main.cpp
 	g++ main.cpp -larmadillo -o main
 
@@ -15,7 +24,7 @@ debug: CPPFLAGS+=-g
 debug: all
 
 # type make/make all to compile test_hmm
-run: all
+
 
 clean:
 	$(RM) $(TARGET)   # type make clean to remove the compiled file
