--- a/svd/Makefile
+++ b/svd/Makefile
@@ -11,9 +11,9 @@ run:
 	matlab -r "run('../graph.txt', '../training.txt', '../test_data/test_data_q3.txt', 'out3.txt');exit(0);" -nodesktop -nosplash
 
 test:
-	python ../eval.py out1.txt ../test_data/test_data_a1.txt
-	python ../eval.py out2.txt ../test_data/test_data_a2.txt
-	python ../eval.py out3.txt ../test_data/test_data_a3.txt
+	python ../eval.py out1.txt ../test_data/test_data_a1.txt | tee result.txt
+	python ../eval.py out2.txt ../test_data/test_data_a2.txt | tee -a result.txt
+	python ../eval.py out3.txt ../test_data/test_data_a3.txt | tee -a result.txt
 all: main.cpp
 	g++ main.cpp -larmadillo -o main
 
