MF fix compile error

--- a/nn/Makefile
+++ b/nn/Makefile
@@ -2,7 +2,7 @@
 
 LDFLAGS+=-lm # link to math library
 
-TARGET=nn_train nn_test
+TARGET=nn_train nn_graph
 
 all: $(TARGET)
 # type make/make all to compile test_hmm
@@ -13,7 +13,11 @@ o3: all
 debug: CPPFLAGS+=-g
 debug: all
 
-run: all
+model.txt:
+	./nn_graph ../graph.txt model.txt
+
+run: model.txt all
+	./nn_train model.txt ../training.txt 100 1e-5 model.txt
 
 clean:
 	$(RM) $(TARGET)   # type make clean to remove the compiled file
