eval_k_precision.py with drawing

--- a/nn/Makefile
+++ b/nn/Makefile
@@ -3,6 +3,7 @@
 LDFLAGS+=-lm # link to math library
 
 TARGET=nn_train nn_graph nn_test
+MODEL=model.txt
 
 all: $(TARGET)
 # type make/make all to compile test_hmm
@@ -13,19 +14,19 @@ o3: all
 debug: CPPFLAGS+=-pg
 debug: all
 
-model.txt:
-	./nn_graph ../graph.txt model.txt
+$(MODEL):
+	./nn_graph ../graph.txt $(MODEL)
 
-run: model.txt all
-	./nn_train model.txt ../training.txt 1000 1e-3 model.txt
+run: $(MODEL) all
+	./nn_train $(MODEL) ../training.txt 1000 1e-3 $(MODEL)
 
 test: all
-	./nn_test model.txt ../test_data/test_data_q1.txt a1.txt
-	./nn_test model.txt ../test_data/test_data_q2.txt a2.txt
-	./nn_test model.txt ../test_data/test_data_q3.txt a3.txt
-	python ../eval.py a1.txt ../test_data/test_data_a1.txt | tee result.txt
-	python ../eval.py a2.txt ../test_data/test_data_a2.txt | tee -a result.txt
-	python ../eval.py a3.txt ../test_data/test_data_a3.txt | tee -a result.txt
+	./nn_test $(MODEL) ../test_data/test_data_q1.txt a1.txt
+	./nn_test $(MODEL) ../test_data/test_data_q2.txt a2.txt
+	./nn_test $(MODEL) ../test_data/test_data_q3.txt a3.txt
+	python ../eval_k_precision.py a1.txt ../test_data/test_data_a1.txt | tee result.txt
+	python ../eval_k_precision.py a2.txt ../test_data/test_data_a2.txt | tee -a result.txt
+	python ../eval_k_precision.py a3.txt ../test_data/test_data_a3.txt | tee -a result.txt
 
 clean:
 	$(RM) $(TARGET)   # type make clean to remove the compiled file
