Matrix Factorization using no degree. bias = 0. turn on = 1

--- a/random/Makefile
+++ b/random/Makefile
@@ -17,6 +17,8 @@ run: all
 	./random ../graph.txt ../training.txt ../test_data/test_data_q1.txt a1.txt
 	./random ../graph.txt ../training.txt ../test_data/test_data_q2.txt a2.txt
 	./random ../graph.txt ../training.txt ../test_data/test_data_q3.txt a3.txt
+
+test: all
 	python ../eval_k_precision.py a1.txt ../test_data/test_data_a1.txt | tee result.txt
 	python ../eval_k_precision.py a2.txt ../test_data/test_data_a2.txt | tee -a result.txt
 	python ../eval_k_precision.py a3.txt ../test_data/test_data_a3.txt | tee -a result.txt
