clear all files to match report

--- a/AutoEncoder/Makefile
+++ b/AutoEncoder/Makefile
@@ -2,7 +2,7 @@
 
 LDLIBS+=-lm -lafcuda# link to math library
 
-TARGET=main test generate
+TARGET=main predict generate
 
 all: $(TARGET)
 # type make/make all to compile test_hmm
@@ -16,14 +16,11 @@ debug: all
 run: all
 	./generate ../graph.txt model_init.txt
 	./main model.txt ../training.txt 1000 1e-3 model_init.txt
-	./test model.txt ../test_data/test_data_q1.txt a1.txt
-	./test model.txt ../test_data/test_data_q2.txt a2.txt
-	./test model.txt ../test_data/test_data_q3.txt a3.txt
-	python ../eval_k_precision.py a1.txt ../test_data/test_data_a1.txt | tee result.txt
-	python ../eval_k_precision.py a2.txt ../test_data/test_data_a2.txt | tee -a result.txt
-	python ../eval_k_precision.py a3.txt ../test_data/test_data_a3.txt | tee -a result.txt
+	./predict model.txt ../test_data/test_data_q1.txt a1.txt
+	./predict model.txt ../test_data/test_data_q2.txt a2.txt
+	./predict model.txt ../test_data/test_data_q3.txt a3.txt
 
-eval: all
+test: all
 	python ../eval_k_precision.py a1.txt ../test_data/test_data_a1.txt | tee result.txt
 	python ../eval_k_precision.py a2.txt ../test_data/test_data_a2.txt | tee -a result.txt
 	python ../eval_k_precision.py a3.txt ../test_data/test_data_a3.txt | tee -a result.txt
