--- a/svd/Makefile
+++ b/svd/Makefile
@@ -4,6 +4,7 @@
 #CPPFLAGS+=-larmadillo
 
 TARGET=main
+all:
 
 run:
 	matlab -r "run('../graph.txt', '../training.txt', '../test_data/test_data_q1.txt', 'out1.txt');exit(0);" -nodesktop -nosplash 
@@ -14,8 +15,6 @@ test:
 	python ../eval.py out1.txt ../test_data/test_data_a1.txt | tee result.txt
 	python ../eval.py out2.txt ../test_data/test_data_a2.txt | tee -a result.txt
 	python ../eval.py out3.txt ../test_data/test_data_a3.txt | tee -a result.txt
-all: main.cpp
-	g++ main.cpp -larmadillo -o main
 
 o3: CPPFLAGS+=-o3
 o3: all
